Scrolling too much on background finally fixed

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -4,3 +4,7 @@
 @theme {
     --font-sans: "Roboto", sans-serif;
 }
+
+html {
+    background-color: #141414;
+}
